crates/macros/tests/regression/ui/id_type_multi_field.rs
use jacquard_macros::id_type;

#[id_type]
struct InvalidId(u8, u8);

fn main() {}
